--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;800;900&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="./src/assets//logo//favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CBO Finanças</title>
