--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;800;900&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="./src/assets//logo//favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CBO Finanças</title>
+    <title>Kam&oliveira</title>
     <style>
       @font-face {
         font-family: Eras;
