--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;800;900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/svg+xml" href="./src/assets//logo//favicon.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./src/assets//logo//favicon.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kam&oliveira</title>
+    <meta
+      name="google-site-verification"
+      content="-x83XcO9x8HJqinXzVik3w1hwdgRTh6XBrU01TZrhFg"
+    />
+    <title>Kaam&oliveira</title>
     <style>
       @font-face {
         font-family: Eras;
-        src: url('./src//fonts/FOCOBOLD.TTF') format('truetype');
+        src: url("./src//fonts/FOCOBOLD.TTF") format("truetype");
       }
     </style>
   </head>
